添加下载脑图图片功能

--- a/baidumindmap/static/css/baidumindmap.css
+++ b/baidumindmap/static/css/baidumindmap.css
@@ -69,3 +69,7 @@
 .baidumindmap_block .full-screen-baidumindmap .full-screen-on {
     display: none;
 }
+
+.baidumindmap_block .full-screen-baidumindmap .js-button-download {
+    display: none;
+}
